--- a/HW/HW2/report/Char.tex
+++ b/HW/HW2/report/Char.tex
@@ -7,7 +7,7 @@
 \usepackage[]{todonotes}
 \usepackage{blindtext}
 \usepackage{listings}
-
+\usepackage{hyperref}
 
 \newcommand{\ahmed}[1]{\todo[inline,color=blue!30]{\textbf{ahmed:} #1}}%set command to comment
 \definecolor{figblue}{rgb}{0,0,1}%set color
