--- a/HW/HW2/report/intro.tex
+++ b/HW/HW2/report/intro.tex
@@ -4,5 +4,5 @@ The following report is divided into two parts; performance analysis of the grap
 
 Second part is concerned with detecting the precision of the graphic card. We first characterize the error associated with primitives math operations in OpenGL. Additioanlly, we use a simple shader program to ensure the compliance of our GPU with IEEE-754 standards and to detect the  implemented rounding algorithm. 
 
-All the experiments presented in the report are done on NVIDIA GeForce GT 610 GPU on a Windows 7 machine with four-core Intel(R) Xeon(R) CPU of 3.7GHz and 32.0GB RAM. 
+In the appendix, we answer few questions related to the implementation of \protect{\wes}. All the experiments presented in the report are done on NVIDIA GeForce GT 610 GPU on a Windows 7 machine with four-core Intel(R) Xeon(R) CPU of 3.7GHz and 32.0GB RAM.  All code are available at \url{https://github.com/Ahdhn/EEC277/tree/master/HW/HW2/sumbitted} 
 
