--- a/HW/HW2/report/part1.tex
+++ b/HW/HW2/report/part1.tex
@@ -17,7 +17,7 @@ On the other side, the rapid change on the fill rate starts to slow down at tria
 
 %========================= Lit Triangles ====================================%
 \subsection{Geometry Rate Vs. Fill Rate on Lit Triangles:}\label{sec:lit}
-The previous test was done on unlit, untexture triangles which is the default setting in \protect{\wes}. Now we turn on the light on the triangles and do the same test and compare the results with the unlit triangles. The results are shown in Figure \ref{fig:fill_geo1}(b) where the crossover point is almost the same (we only notice it moved a little closer to triangle of size $2^{11}$). Additionally, we notice that the upper portion of the graph (towards triangle of size greater than $2^{5}$ pixels) of the geometry rate curve is identical i.e., the dotted and the solid lines overlap. For the lower part of the graph, it is understood that the geometry rate should decrease since the lighting is being processed at this stage and thus more work need to done for computing each vertex, especially that more vertices are needed for such small triangles. This will directly affect the fill rate since less work is sent to the rasterization stage and thus a decline in absolute fill rate. As the triangle size increases, less number of vertices need to be processed in the geometry stage. Thus, even though more work need to be done per vertex (compared with unlit triangles), we notice that the lit triangle rate is almost identical to the unlit ones. In contrast, the behavior of fill rate curve is not consistent and we do not see a certain trend. For example, triangle of size $2^{12}$ and $ 2^{15}$ pixels have a higher fill rate with lit triangles than with unlit ones. While for triangle of size $2^{14}$ and $2^{16}$, it is the opposite. We would expect that for this upper portion to be identical with the unlit triangles, since the geometry stage is now able to send the same amount of work and there is no additional work required at the rasterization stage for lit triangles. Thus, We could not derive a conclusion for such behavior.
+The previous test was done on unlit, untexture triangles which is the default setting in \protect{\wes}. Now we turn on the light on the triangles and do the same test and compare the results with the unlit triangles. The results are shown in Figure \ref{fig:fill_geo1}(b) where the crossover point is almost the same (we only notice it moved a little closer to triangle of size $2^{11}$). Additionally, we notice that the upper portion of the graph (triangles of size greater than $2^{5}$ pixels) of the geometry rate curve is identical i.e., the dotted and the solid lines overlap. For the lower part of the graph, it is understood that the geometry rate should decrease since the lighting is being processed at this stage and thus more work need to done for computing each vertex, especially that more vertices are needed for such small triangles. This will directly affect the fill rate since less work is sent to the rasterization stage and thus a decline in absolute fill rate. As the triangle size increases, less number of vertices need to be processed in the geometry stage. Thus, even though more work need to be done per vertex (compared with unlit triangles), we notice that the lit triangle rate is almost identical to the unlit ones. In contrast, the behavior of fill rate curve is not consistent and we do not see a certain trend. For example, triangle of size $2^{12}$ and $ 2^{15}$ pixels have a higher fill rate with lit triangles than with unlit ones. While for triangle of size $2^{14}$ and $2^{16}$, it is the opposite. We would expect that for this upper portion to be identical with the unlit triangles, since the geometry stage is now able to send the same amount of work and there is no additional work required at the rasterization stage for lit triangles. Thus, We could not derive a conclusion for such behavior.
 
 \begin{figure}[!tbh]
  \centering  
@@ -31,7 +31,7 @@ The previous test was done on unlit, untexture triangles which is the default se
 
 %=========================Textured Triangles ===================================%
 \subsection{Geometry Rate Vs. Fill Rate on Textured Triangles:}\label{sec:tx}
-Now we turn on testing the textured triangles. Following the same methodology as in Section \ref{sec:lit}, we add textures of size $2^{7}\times2^{7}$ to the triangles and vary the triangle size and record the fill and geometry rates. We tested first with texture of smaller size ($2^{3}\times2^{3}$), but the graph we got was identical to the untextured one, so we discarded. We assume that this happened due to minimal workload required with small texture size. 
+Now we turn on testing the textured triangles. Following the same methodology as in Section \ref{sec:lit}, we add textures of size $2^{7}\times2^{7}$ to the triangles and vary the triangle size and record the fill and geometry rates. We tested first with texture of smaller size ($2^{2}\times2^{2}$), but the graph we got was identical to the untextured one, so we discarded it. We assume that this happened due to minimal workload required with small texture size. 
 
 Figure \ref{fig:fill_geo2}(a), compare the fill and geometry rate for textured and untextured triangles. The crossover point has shifted to be between triangle of size $2^{12}$ and $2^{13}$ pixels. The graph also shows a decline in the performance in the textured triangles for both the geometry and fill rate. For the geometry stage, the decline in the number of vertices processed per second is due to the necessary transformation done per vertex (applying the \emph{projector function}\cite{akenine2008real}). The graph in Figure \ref{fig:fill_geo1}(b) and in Figure \ref{fig:fill_geo2}(a) suggest that per-vertex-operation for the lighting is similar to per-vertex-operation for texture which is indicated by the absolute value of geometry rate at a triangle size (for triangle size $\leq 2^{5}$ pixels). Additionally, the graph shows a divergence in the geometry rate between the textured and untextured curves. At first glance, this was surprising and we expected a similar behavior as in lit triangles (the curves overlap for large triangles). This stemmed from the fact that as the number of triangles decreased as the size increases, less number of vertices needed to be processed. However, we think that this divergence could be due to caching. Since we are using a relatively large texture ($2^{7}\times2^{7}$) and for a big triangles, it is required to fetch different parts of the texture image that may not be fetched all together into the cache (less spatial locality).
 
@@ -55,7 +55,7 @@ Here we try to evaluate the performance with two different type of triangles; di
 
 For indexed disjoint triangle, the total number of vertices is reduced by factor of three. Thus, we expect the geometry rate to be higher for the case of indexed disjoint triangles when compared with disjoint triangles. But actually this not the case as shown in Figure \ref{fig:fill_geo3}(b) where the disjoint triangles geometry rate outperforms the indexed variant. If we, instead, look at the triangle rate (MTris/Sex), we will find that the triangle rate is identical for triangle of size $\geq2^{5}$. This means if the geometry stage is processing $X$ triangles, then for the disjoint triangles case, $3\times X$ vertex should be processed. But for the indexed disjoint case, less number of vertices will be processed. For triangle size $\geq2^{5}$, by dividing the the geometry rate for the disjoint triangle by the geometry rate for indexed disjoint triangles and taking the normalized average, the result would be the number of triangles shared per vertex in the indexed disjoint triangles. Rounding the result, we found that it is 6 triangles per vertex. In conclusion, this indicates that the graphic card must been optimized to handle both cases efficiently by fixing the number of triangles being processed regardless to the vertex rate (which sounds a complicated task to achieve!)
 
-For fragment rate, since the geometry stage in both cases is able to send the same workload (in terms of triangle rate) for triangle of size $\geq 2^{5}$, we the fragment is almost identical for both cases with few wiggles that could be due to caching behavior in the disjoint case. Additionally, when the triangle rate increases for index disjoint triangles (triangle size $2^{1}-2^{5}$), we notice an equivalent improvement in fragment rate. The reason behind that is for such small triangles, the process is limited by geometry stage. If the geometry rate improves (able to send more work to rasterizer), then fill rate will improve too. 
+For fragment rate, since the geometry stage in both cases is able to send the same workload (in terms of triangle rate) for triangles of size $\geq 2^{5}$, the fragment is almost identical for both cases with few wiggles that could be due to caching behavior in the disjoint case. Additionally, when the triangle rate increases for index disjoint triangles (triangle size $2^{1}-2^{5}$), we notice an equivalent improvement in fragment rate. The reason behind that is for such small triangles, the process is limited by geometry stage. If the geometry rate improves (able to send more work to rasterizer), then fill rate will improve too. 
 
 We conclude from this comparison that we should also investigate the triangle rate, along with the vertex rate and fill rate in order to fully characterize and understand the graphic card behavior.
 \begin{figure}[!tbh]
@@ -71,15 +71,15 @@ We conclude from this comparison that we should also investigate the triangle ra
 
 %========================= Batch Size TStrip Triangles====================================%
 \subsection{Geometry Rate Vs. Fill Rate for Varying Batch Size:}
-The objective of this experiment is to find the buffer size at which the system becomes GPU-limited not interface-limited. Using \protect{\wes}, we were able to test different buffer sizes with each {\fontfamily{qcr}\selectfont glDrawArrays} call and record the vertex and triangle rate of each buffer size as shown in Figure \ref{fig:fill_geo4}(a). We notice that the least performance corresponds to the smallest buffer size since the CPU is not able to send enough work to the GPU and thus the system is bandwidth-limited. With increasing the bucket size, the vertex and triangle rate improves up to buffer of size $2^{4}$ where the system is GPU limited (limited by the geometry stage). The curve exhibits another jump in the performance with buffer of size $2^{12}$ where we have to decrease the triangle area to maintain a buffer of large size. After this second jump, the curve is almost the same which means that the process is still limited by the GPU. 
+The objective of this experiment is to find the buffer size at which the system becomes GPU-limited not interface-limited. Using \protect{\wes}, we were able to test different buffer sizes with each {\fontfamily{qcr}\selectfont glDrawArrays} call and record the vertex and triangle rate of each buffer size as shown in Figure \ref{fig:fill_geo4}(a). We notice that the least performance corresponds to the smallest buffer size since the CPU is not able to send enough work to the GPU and thus the system is bandwidth-limited. With increasing the bucket size, the vertex and triangle rate improves up to buffer of size $2^{4}$ where the system is GPU limited (limited by the geometry stage). The curve exhibits another jump in the performance with buffer of size $2^{12}$ where we had to decrease the triangle area to maintain a buffer of large size. After this second jump, the curve is almost the same which means that the process is still limited by the GPU. 
 
-To calculate the bandwidth, we will have to multiply the number of vertices per batch (buffer size), but the content of these vertices. For our experiment, we used unlit, untextured triangles. Thus, the inofrmation hold by each vertex is the position (x,y,z,w) and its color (r,g,b). Each of these are 4 bytes which gives a total of 28 bytes per vertex. Thus, the bandwidth at the turnaround point 448 bytes/batch. 
+To calculate the bandwidth, we will have to multiply the number of vertices per batch (buffer size) by the content of these vertices. For our experiment, we used unlit, untextured triangles. Thus, the information hold by each vertex is the position (x,y,z,w) and its color (r,g,b). Each of these are 4 bytes which gives a total of 28 bytes per vertex. Thus, the bandwidth at the turnaround point 448 bytes/batch. 
 
 
 
 %========================= Batch Size TStrip Triangles====================================%
 \subsection{Geometry Rate Vs. Fill Rate for Varying Texture Size:}
-The final experiment was conduced to characterize the texture size and understand how it affects the performance. We used \protect{\wes} to vary the size of the texture image from $2^{3}\times2^{3}$ texels to $2^{12}\times2^{12}$ texels and recorded the vertex, fill, and triangles rates as shown in Figure \ref{fig:fill_geo4}(b). We notice degradation in both the vertex rate and fill rate as the size of texture size increases. The decline in vertex rate (and triangle rate) is less dramatic than fill rate. For both vertex and fill rate, we assume the performance declines due to caching. For smaller texture size, the texture image can fit in the texture cache memory. Thus, the performance is limited by the operation itself. For larger texture size, the texture memory bandwidth is the bottleneck due to the repeated look-ups since the texture image could not be resident in the cache all the time. For fill rate, we would expect that the fill rate would remain constant for a range of texture size after which the fill rate would fall. Such a value would give an indication for the texture memory cache. But it looks like the cache is optimized (e.g. pre-fetching) such that the degradation in performance as the texture size increases is less dramatic. 
+The final experiment was conduced to characterize the texture size and understand how it affects the performance. We used \protect{\wes} to vary the size of the texture image from $2^{3}\times2^{3}$ texels to $2^{12}\times2^{12}$ texels and recorded the vertex, fill, and triangles rates as shown in Figure \ref{fig:fill_geo4}(b). We notice degradation in both the vertex rate and fill rate as the size of texture size increases. The decline in vertex rate (and triangle rate) is less dramatic than fill rate. For both vertex and fill rate, we assume the performance declines due to caching. For smaller texture size, the texture image can fit in the texture cache memory. Thus, the performance is limited by the operation itself. For larger texture size, the texture memory bandwidth is the bottleneck due to the repeated look-ups since the texture image could not be resident in the cache all the time. For fill rate, we would expect that the fill rate to remain constant for a range of texture size after which the fill rate would fall. Such a value would give an indication for the texture memory cache. But it looks like the cache is optimized (e.g. pre-fetching) such that the degradation in performance as the texture size increases is less dramatic. 
 
 \begin{figure}[!tbh]
  \centering   
