organize proposal sections
more papers

--- a/HW/Final Project/proposal/proposal.tex
+++ b/HW/Final Project/proposal/proposal.tex
@@ -31,14 +31,15 @@
 \date{21 February 2017} 
 \maketitle
 
+\input{tex/abs}
 
-\input{background}
+\input{tex/motivation}
 
-\input{related}
+\input{tex/related}
 
-\input{goal}
+\input{tex/goal}
 
-\input{milestones}
+\input{tex/milestones}
 
 
 %=========================Bib====================================%
